--- a/css/styles.css
+++ b/css/styles.css
@@ -88,8 +88,8 @@ body {
 	border-top: none;
 	
 }
-.team-item:hover,
-.team-item:focus {
+.team-item,
+.team-item  {
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
 }
@@ -233,6 +233,7 @@ body {
 	margin-top: 40px;
 	border-radius: 4px;
 	padding: 10px 32px;
+	border: none;
 }
 .hero {
 	text-align: center;
@@ -240,6 +241,9 @@ body {
 	background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/Img.jpg);
 	background-color: #C4C4C4;
 	background-size: cover;
+	max-width: 1600px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .section {
@@ -303,18 +307,19 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 25px;
 	width: 270px;
 	height: 120px;
 	background-color: var(--background-color-additional);
 }
-
+.section-about-pic {
+	padding-top: 0;
+}
 
 .team p {
 	font-size: 16px;
 	line-height: 1.19;
 	text-align: center;
-	margin-bottom: 30px;
+	margin-bottom: 16px;
 }
 .section-title {
 	color: var(--color-title);
@@ -330,10 +335,19 @@ body {
 .clients {
   fill: currentColor;
 }
+
+
+
 .clients-link {
 	color: #AFB1B8;
-	
-	/* display:block; */
+	width: 100%;
+	height: 100% ;
+	border: 1px solid #AFB1B8;
+    border-radius: 4px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -343,20 +357,10 @@ border-color:var(--color-accent);
 
 
 
-.clients-company {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	/* align-items: baseline; */
+.clients-company {	
 	fill: #AFB1B8;
 	width: 170px;
 	height: 92px;   
-	border: 1px solid #AFB1B8;
-	border-radius: 4px;
-}
-.clients-company:hover,
-.clients-company:focus {
-border-color:var(--color-accent);	
 }
 
 
@@ -372,7 +376,7 @@ border-color:var(--color-accent);
 .footer-div {
 	/* margin-left: 250px; */
 	margin-right: 70px;
-	padding-top: 60px;
+	
 }
 .ftr {
 	/* display: flex;
@@ -420,7 +424,13 @@ gap: 30px;
 .footer-contact {
 	color: var(--color-foot-adr);
 }
+.foot-links {
+	text-transform: uppercase;
+	font-weight: 700;
+   line-height: 1.14;
+   letter-spacing: 0.03em;
 
+}
 .footer-contacts a {
 	font-style: normal;
 	font-weight: 400;
@@ -485,10 +495,8 @@ gap: 30px;
 	gap: 30px;
 	
 }
-.portf-pic {
-	width: 370px;
-	/* height: 404px; */
-}
+
+
 .site-nav :hover,
 .site-nav :focus,
 .contacts :hover,
@@ -517,13 +525,19 @@ gap: 30px;
 	margin: -1px;
 }
 /* --------PORTFOLIO-------- */
+.portf-pic {
+	width: 370px;
+}
 
- .portf-pic:hover,
- .portf-pic:focus{
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-  0px 4px 4px rgba(0, 0, 0, 0.06),
+.portf-link {
+display: block;
+}
+
+.portf-link:hover,
+ .portf-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+  0px 4px 4px rgba(0, 0, 0, 0.06), 
   1px 4px 6px rgba(0, 0, 0, 0.16);
-/* border-color: var(--color-accent); */
 }
 
 
@@ -543,7 +557,6 @@ gap: 30px;
 	border: none;
 	align-items: center;
 	border-radius: 4px;
-	/* margin-bottom: 50px; */
 }
 
 .social-list {
@@ -574,6 +587,4 @@ gap: 30px;
 .social-list-link:hover .cosial-icon,
 .social-list-link:focus .cosial-icon {
 	fill: #ffffff;
-	
-	
 }
