--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,6 @@ body {
 }
 .contacts-link {
 
-	margin-left: 10px;
 	color: var(--color-contact);
 	/* font-family: 'Roboto'; */
 	/* font-style: normal; */
@@ -307,9 +306,13 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 270px;
+	width: 100%;
 	height: 120px;
 	background-color: var(--background-color-additional);
+}
+
+.preference-item {
+	width: calc((100%-90px) / 4);
 }
 .section-about-pic {
 	padding-top: 0;
@@ -534,7 +537,7 @@ display: block;
 }
 
 .portf-link:hover,
- .portf-link:focus {
+.portf-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
   0px 4px 4px rgba(0, 0, 0, 0.06), 
   1px 4px 6px rgba(0, 0, 0, 0.16);
